# pynenguk-quiz

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
.github/: FUNDING.yml
src/pynenguk_quiz/: __init__.py  question_table_widget.py  questions.json  select_questions_widget.py  termquiz.py
