[metadata]
name = pynenguk-quiz
version = 0.7.3
description = CLI tool to run pyneng quiz
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natenka/pynenguk-quiz
author = Natasha Samoylenko
author_email = "Natasha Samoylenko" <natasha.samoylenko@gmail.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    textual==0.1.18
    rich

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    pquiz = pynenguk_quiz.termquiz:main

